--- a/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_Ios.xcscheme
+++ b/PopEngine.xcodeproj/xcshareddata/xcschemes/PopEngine_Ios.xcscheme
@@ -14,37 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BF5EAFB4237F0C100077BCF5"
-               BuildableName = "PopEngine.framework"
-               BlueprintName = "PopEngine"
-               ReferencedContainer = "container:PopEngine.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "NO"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "BF151F7523845F2E00A70EBF"
                BuildableName = "PopEngine_Ios.framework"
                BlueprintName = "PopEngine_Ios"
-               ReferencedContainer = "container:PopEngine.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BF5EB0532380335D0077BCF5"
-               BuildableName = "PopEngineUnitTestApp.app"
-               BlueprintName = "PopEngineUnitTestApp"
                ReferencedContainer = "container:PopEngine.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -57,15 +29,6 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF5EB0532380335D0077BCF5"
-            BuildableName = "PopEngineUnitTestApp.app"
-            BlueprintName = "PopEngineUnitTestApp"
-            ReferencedContainer = "container:PopEngine.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -73,23 +36,21 @@
       buildConfiguration = "Debug_JavascriptCore"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      disableMainThreadChecker = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF5EB0532380335D0077BCF5"
-            BuildableName = "PopEngineUnitTestApp.app"
-            BlueprintName = "PopEngineUnitTestApp"
+            BlueprintIdentifier = "BF151F7523845F2E00A70EBF"
+            BuildableName = "PopEngine_Ios.framework"
+            BlueprintName = "PopEngine_Ios"
             ReferencedContainer = "container:PopEngine.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -102,9 +63,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF5EAFB4237F0C100077BCF5"
-            BuildableName = "PopEngine.framework"
-            BlueprintName = "PopEngine"
+            BlueprintIdentifier = "BF151F7523845F2E00A70EBF"
+            BuildableName = "PopEngine_Ios.framework"
+            BlueprintName = "PopEngine_Ios"
             ReferencedContainer = "container:PopEngine.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
