--- a/Source_Ios/PopEngine_Ios.xcconfig
+++ b/Source_Ios/PopEngine_Ios.xcconfig
@@ -1,4 +1,4 @@
-#include "SoyLib/SoyLib_Ios.xcconfig"
+#include "../src/SoyLib/SoyLib_Ios.xcconfig"
 
 GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) TARGET_IOS
 //GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) ENABLE_OPENGL
