Added the PopEngine[Test]App to windows!
Former-commit-id: 7828a2ab6515152719db01a905257ebb57099b9b

--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -1240,6 +1240,6 @@
     </Font>
   </ItemGroup>
   <ItemGroup>
-    <CopyFileToFolders Include="..\src\Libs\x264\bin\x64\x264.dll" />
+    <CopyFileToFolders Include="..\src\PopEngine.h" />
   </ItemGroup>
 </Project>
