Changed openvr_api from custom build tool to copy
Former-commit-id: b8d9952f3e4aee71f025320b1f346f856d8b8902

--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -340,9 +340,9 @@
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master_V8|x64'">true</DeploymentContent>
     </CustomBuild>
     <None Include="..\src\Libs\JavascriptCore\win64\WTF.pdb" />
-    <CustomBuild Include="..\src\Libs\OpenVr\bin\win64\openvr_api.dll">
+    <CopyFileToFolders Include="..\src\Libs\OpenVr\bin\win64\openvr_api.dll">
       <FileType>Document</FileType>
-    </CustomBuild>
+    </CopyFileToFolders>
     <CustomBuild Include="..\src\Libs\Opencv\x64\vc15\bin\opencv_world410.dll">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Master_JsCore|x64'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_V8|x64'">true</ExcludedFromBuild>
