Some new temp vs files, ignored.
Former-commit-id: 74304ec5620ae41fb7fb7f6c061328289327c3a2

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ BuildData/
 PopEngine\.visualstudio/\.vs/PopEngine/v15/ipch/
 
 PopEngine.visualstudio/packages/
+
+PopEngine.visualstudio/.vs/PopEngine/v15/
