--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "src/Json11"]
 	path = src/Json11
 	url = https://github.com/dropbox/json11.git
+[submodule "src/PopDepthToYuv"]
+	path = src/PopDepthToYuv
+	url = https://github.com/SoylentGraham/PopDepthToYuv.git
