--- a/PopEngine.visualstudio/PopEngineLinux.props
+++ b/PopEngine.visualstudio/PopEngineLinux.props
@@ -3,12 +3,14 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <IncludePath>/usr/include/webkitgtk-4.0/;$(IncludePath)</IncludePath>
-    <LibraryPath>/usr/lib/aarch64-linux-gnu/</LibraryPath>
+    <IncludePath>./src/SoyLib/src;../src/SoyLib/src</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup>
+    <Link>
+      <LibraryDependencies>javascriptcoregtk-4.0</LibraryDependencies>
+    </Link>
     <ClCompile>
-      <PreprocessorDefinitions>JSAPI_JSCORE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>TARGET_LINUX</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup />
