--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ PopEngine\.visualstudio/\.vs/PopEngine/v15/ipch/
 PopEngine.visualstudio/packages/
 
 PopEngine.visualstudio/.vs/PopEngine/v15/
+
+PopEngine.visualstudio/obj/ARM/
